2005-06-27  Carlos O'Donell  <carlos@systemhalted.org>

	* posix/regcomp.c (re_compile_internal): Call __libc_lock_init
	after init_dfa.

2005-07-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/fpu/s_sincosl.S: Use retq not ret.  Remove
	alignment.
	* sysdeps/x86_64/fpu/s_sincos.S: New file.

	* include/fenv.h: Add libm_hidden_proto for fesetround and
	feholdexcept.
	* sysdeps/alpha/fpu/feholdexcpt.c: Add libm_hidden_def.
	* sysdeps/alpha/fpu/fesetround.c: Likewise.
	* sysdeps/generic/feholdexcpt.c: Likewise.
	* sysdeps/generic/fesetround.c: Likewise.
	* sysdeps/i386/fpu/feholdexcpt.c: Likewise.
	* sysdeps/i386/fpu/fesetround.c: Likewise.
	* sysdeps/ia64/fpu/feholdexcpt.c: Likewise.
	* sysdeps/ia64/fpu/fesetround.c: Likewise.
	* sysdeps/powerpc/fpu/feholdexcpt.c: Likewise.
	* sysdeps/powerpc/fpu/fesetround.c: Likewise.
	* sysdeps/s390/fpu/feholdexcpt.c: Likewise.
	* sysdeps/s390/fpu/fesetround.c: Likewise.
	* sysdeps/sh/sh4/fpu/feholdexcpt.c: Likewise.
	* sysdeps/sh/sh4/fpu/fesetround.c: Likewise.
	* sysdeps/sparc/fpu/feholdexcpt.c: Likewise.
	* sysdeps/sparc/fpu/fesetround.c: Likewise.
	* sysdeps/x86_64/fpu/feholdexcpt.c: Likewise.
	* sysdeps/x86_64/fpu/fesetround.c: Likewise.
	* sysdeps/generic/s_significand.c (__significand): Use __ilogb not
	ilogb.
	* sysdeps/generic/s_significandf.c (__significandf): Use __ilogbf
	not ilogbf.
	* sysdeps/ieee754/dbl-64/s_sincos.c (__sincos): Use __sin and
	__cos, not sin and cos.

2005-07-07  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_send.c (send_dg): Recognize referral results and
	treat them as server errors.
	Based on a patch by Jason Vas Dias <jvdias@redhat.com>.

2005-07-08  Carlos O'Donell  <carlos@systemhalted.org>

	* sysdeps/hppa/setjmp.S (__sigsetjmp): Use %r1 not %r19.

	* sysdeps/hppa/add_n.s (__mpn_add_n): Use sr0 or r0, not 0.
	* sysdeps/hppa/lshift.s (__mpn_lshift): Likewise.
	* sysdeps/hppa/rshift.s (__mpn_rshift): Likewise.
	* sysdeps/hppa/sub_n.s (__mpn_sub_n): Likewise.